CHANGELOG:

ver 1.6.1 (04/13/2008)
 Changed: 	_update method refactored.
 Changed: 	Updated to Prototype 1.6.0.1 and Script.aculo.us 1.8.1
 Changed: 	Removed Effect.ScaleBy. Using Effect.Morph. Code changed respectively.
 Changed: 	_insertContent and _putContent methods refactored. Duplicate code removed.

 Fixed: 	Fixed double tabbing in forms for Opera and other browsers [#199]
 Fixed: 	Any characters are now accepted to type in form in Safari/WebKit [#201]
 Fixed: 	_insertContent method refactored for plain HTML case. Content flickering in Firefox is redone without setTimeout function (IE compatibility).
 Fixed: 	removed some setTimeout methods which were a fixes for IE.

ver 1.6.0 (12/17/2007)
 Added: 	Added 2 methods for resizing Modalbox height for content (resizeToContent and resizeToInclude)
 Added: 	Preliminary support for ASP.NET controls. Added boolean parameter 'aspnet'.
 Added: 	Added onException callback support for Ajax request
 Added: 	Experimental CSS3 drop shadow and rounded corners added
 Added: 	Added 'autoFocusing' option [#133]
 Added: 	Added a way to customize close link text [#153]
 Added: 	Added 'beforeHide' callback which is being fired right before slide up effect [#154]

 Changed: 	Updated to prototype 1.6.0 and script.aculo.us 1.8.0
 Changed: 	Code base refactored to be prototype 1.6.0 compliant
 Changed: 	Browser dependant checks rewritten with Prototype.Browser object
 Changed: 	_prepareIE method now includes toggleSelects functionality
 Changed: 	_toggleSelects and _setOverlay methods removed completely
 Changed: 	_prepareIE method heavily refactored
 Changed: 	DOM insertions refactored with prototype 1.6.0 methods
 Changed: 	Element creation refactored with prototype 1.6.0 methods. builder.js removed.
 Changed: 	Ajax.request callback change: onComplete -> onSuccess
 Changed: 	No title case improved. Fixed extra header space addition, changed CSS
 Changed: 	_insertContent method re-factored to be independed